Thu Mar  8 21:27:54 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.{h cpp}: Change ACE_String_Base::release_ from int
          to bool. Thanks to Kelly Hickel for this change. This changes the
          signatures of the following methods:
            ACE_String_Base (const CHAR *s,
                             ACE_Allocator *the_allocator = 0,
                             int release = 1);
          to
            ACE_String_Base (const CHAR *s,
                             ACE_Allocator *the_allocator = 0,
                             bool release = true);

            ACE_String_Base (const CHAR *s,
                             size_type len,
                             ACE_Allocator *the_allocator = 0,
                             int release = 1);
          to
            ACE_String_Base (const CHAR *s,
                             size_type len,
                             ACE_Allocator *the_allocator = 0,
                             bool release = true);

            void set (const CHAR * s, int release = 1);
          to
            void set (const CHAR * s, bool release = true);

            void set (const CHAR * s, size_type len, int release);
          to
            void set (const CHAR * s, size_type len, bool release);

            void clear (int release = 0);
          to
            void clear (bool release = false);

        * ace/Configuration.cpp:
        * ACEXML/common/NamespaceSupport.cpp:
        * ACEXML/parser/parser/Entity_Manager.inl:
        * tests/SString_Test.cpp: Changes to string usage to
          reflect the above signature changes. Changed '0' args to 'false'.

        * NEWS: Added a description of the above changed methods.

Thu Mar  8 21:24:38 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Cached_Conn_Test.cpp:
        * tests/Cached_Accept_Conn_Test.cpp: Replace use of ACE_ASSERT with
          ACE_ERROR. ACE_ASSERTS on single-process targets do really bad
          things...