@@ -34,11 +34,6 @@ ACE_Event_Handler::ACE_Event_Handler (ACE_Reactor *r,
 ACE_Event_Handler::~ACE_Event_Handler (void)
 {
   // ACE_TRACE ("ACE_Event_Handler::~ACE_Event_Handler");
-  if (this->reactor_ != 0)
-    {
-      ACE_Errno_Guard guard (errno);     // purge may get ENOTSUP
-      this->reactor_->purge_pending_notifications (this);
-    }
 }
 
 // Gets the file descriptor associated with this I/O device.
