@@ -86,6 +86,11 @@ USER VISIBLE CHANGES BETWEEN ACE-5.5.6 and ACE-5.5.7
 . Added suppor for VxWorks 6.x cross compilation using a Windows host
   system
 
+. The destructor of ACE_Event_Handler no longer calls
+  purge_pending_notifications().  Please see bugzilla #2845 for the full
+  rationale.
+  (http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=2845) 
+
 USER VISIBLE CHANGES BETWEEN ACE-5.5.5 and ACE-5.5.6
 ====================================================
 
